@@ -158,3 +158,4 @@ groupsame=0
 preload_mode=
 bccs=0
 bw_nomailout=0
+show_nf=master,reseller,domain
