@@ -32,6 +32,7 @@ domains_sort=Sort virtual servers by,1,user-Owner,dom-Domain name,owner-Descript
 show_ugroup=Allow selection of different group for server admins?,1,1-Yes,0-No
 theme_image=URL for company logo image,3,None or default,50
 theme_link=Link destination for company logo,3,None,50
+show_nf=Show new features to,2,master-Master administrator,reseller-Resellers,domain-Domain owners
 
 line1.5=Server administrator permissions,11
 edit_afiles=Can edit alias include and reply files?,1,1-Yes,0-No
