@@ -1,0 +1,9 @@
+<header>Show new features to</header>
+
+When using a theme that can display new features in the current version of
+Virtualmin, this setting determines which types of users get to see them.
+Users will only see notification of features that they have access to, 
+and will each separately be able to hide them. <p>
+
+<footer>
+
