@@ -4031,9 +4031,10 @@ mail_bccing=BCCing all sent email to $1 ..
 mail_nobcc=Disabling the BCC of sent email
 mail_bccoff=Leaving BCCing of sent email disabled.
 
-nf_header=The following new features are available in $1. Click on a feature name to see it in use ..
+nf_header=The following new features are available in $1 ..
 nf_desc=Feature
 nf_html=Description
 nf_vm=Virtualmin
 nf_and=$1 and $2
 nf_seen=Hide New Features
+nf_try=Try it ..
